[package]
name = "db-migrate-tool"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A database migration and data merging tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0.12"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Database
odbc-api = "13.0.0"
once_cell = "1.19"

# Parallel processing
rayon = "1.8"

# Interactive CLI
inquire = "0.7.5"

# Template engine for reports
tera = "1.0"

# DateTime handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Progress bars
indicatif = "0.17"

# HTML report generation
markup = "0.15.0"
